# c-ipc

./: CMakeLists.txt  README.md
include/: Ipc.h
src/: Ipc.c  test_Ipc.c
